--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "busboy": "^1.6.0",
     "camelcase-css": "^2.0.1",
     "caniuse-lite": "^1.0.30001731",
+    "chart.js": "^4.5.0",
     "chokidar": "^3.6.0",
     "client-only": "^0.0.1",
     "clsx": "^2.1.1",
@@ -58,6 +59,8 @@
     "fill-range": "^7.1.1",
     "foreground-child": "^3.3.1",
     "fraction.js": "^4.3.7",
+    "framer": "^2.4.1",
+    "framer-motion": "^12.23.12",
     "function-bind": "^1.1.2",
     "glob": "^10.4.5",
     "glob-parent": "^6.0.2",
@@ -83,6 +86,7 @@
     "micromatch": "^4.0.8",
     "minimatch": "^9.0.5",
     "minipass": "^7.1.2",
+    "motion": "^12.23.12",
     "mz": "^2.7.0",
     "nanoid": "^3.3.11",
     "next": "^15.4.5",
@@ -107,6 +111,7 @@
     "prop-types": "^15.8.1",
     "queue-microtask": "^1.2.3",
     "react": "^18.3.1",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.3.1",
     "react-is": "^18.3.1",
     "react-smooth": "^4.0.4",
